# cmakefile

./: CMakeLists.txt  README.md  hello.cpp  main.cpp
include/: my.hpp
